--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,17 @@ services:
   - type: web
     name: fake-news-detector
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run app/app.py 
+    buildCommand: |
+      pip install -r requirements-deploy.txt
+      python -c "import nltk; nltk.download('stopwords'); nltk.download('punkt')"
+    startCommand: streamlit run app/app.py
+    plan: free
+    envVars:
+      - key: PYTHONUNBUFFERED
+        value: "1"
+      - key: PYTHONPATH
+        value: "."
+      - key: STREAMLIT_SERVER_MAX_UPLOAD_SIZE
+        value: "10"
+      - key: STREAMLIT_SERVER_MEMORY_LIMIT
+        value: "512" 
